Fix hero banner layout issues for smaller devices

--- a/assets/scss/4-layout/_header.scss
+++ b/assets/scss/4-layout/_header.scss
@@ -17,7 +17,7 @@ header.masthead {
 }
 
 header.masthead .intro-text {
-  padding-top: 250px;
+  padding-top: 150px;
   padding-bottom: 100px
 }
 
@@ -26,7 +26,7 @@ header.masthead .intro-text .intro-lead-in {
   font-style: italic;
   line-height: 22px;
   margin-bottom: 25px;
-  margin-top: 150px;
+  margin-top: 140px;
   font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif
 }
 
